# EventNtuple

./: .gitignore  .muse  CMakeLists.txt  README.md  testSID.py
doc/: branches.md  developers.md  ntuplehelper.md  v5-to-v6.md
example-analysis-scripts/: PEs.C  PEs.py  PlotDemo.py  PrintDemo.py  utils.py
example-analysis-scripts/pyutils-examples/: example_cuts.py
fcl/: MakeSurfaceSteps.fcl  README.md  Reflections.fcl  TrkAnaReco.fcl  from_dig-DeMCalib.fcl  from_dig-OnSpill.fcl  from_dig-mockdata.fcl  from_mcs-DeCalib.fcl  from_mcs-DeMCalib.fcl  from_mcs-OffSpill.fcl  from_mcs-bestDeM.fcl  from_mcs-ceSimReco.fcl  from_rec-crv-vst.fcl  prolog.fcl
inc/: CaloClusterInfoMC.hh  CentralHelixInfo.hh  CrvHitInfoReco.hh  CrvSummaryMC.hh  CrvSummaryReco.hh  EventInfo.hh  EventInfoMC.hh  HitCount.hh  KinematicLineInfo.hh  LoopHelixInfo.hh  MCStepInfo.hh  MCStepSummaryInfo.hh  MVAResultInfo.hh  SimInfo.hh  SurfaceStepInfo.hh  TrkCaloHitInfo.hh  TrkCount.hh  TrkInfo.hh  TrkInfoMC.hh  TrkSegInfo.hh  TrkStrawHitInfo.hh  TrkStrawHitInfoMC.hh  TrkStrawMatInfo.hh
src/: CMakeLists.txt  CrvHitInfoReco.cc  CrvInfoHelper.cc  EventNtupleMaker_module.cc  InfoMCStructHelper.cc  InfoStructHelper.cc
utils/helper/: ntuplehelper.py  rooutilhelper.py
utils/pyutils/: pyprint.py
utils/rooutil/: README.md  draft.md
utils/rooutil/examples/: CreateNtuple.C  CreateTrackNtuple.C  CreateTree.C  PlotCRVPEs.C  PlotMuonPosZ.C  (+21 more)
validation/: README.md  create_val_file.C  create_val_file_rooutil.C  plot_rooutil_timing.C  test_fcls.sh  test_rooutil.sh  test_rooutil_examples.sh  test_rooutil_timing.sh
(+8 files in other folders)
